--- a/back/package.json
+++ b/back/package.json
@@ -16,9 +16,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "sequelize": "^3.30.4"
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.12"
   },
   "devDependencies": {
-    "cors": "^2.8.4"
+    "cors": "^2.8.5"
   }
 }
